# app/src/main/resources/public/api/openapi.yaml
@@ -222,7 +222,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /api/v1/date-ranges:
+  /date-ranges:
     get:
       tags:
         - Reference Data
@@ -235,6 +235,19 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DateRangesResponse'
+  /payment-types:
+    get:
+      tags:
+        - Reference Data
+      summary: Get available payment types
+      operationId: getPaymentTypes
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaymentTypesResponse'
 
 components:
   parameters:
@@ -502,6 +515,15 @@ components:
           description: Last 4 Weeks
         - value: LAST_THREE_MONTHS
           description: Last 3 Months
+    PaymentTypesResponse:
+        type: array
+        items:
+            $ref: '#/components/schemas/PaymentType'
+        example:
+          - value: PRE
+            description: PRE
+          - value: POS
+            description: POS
 
     Error:
       type: object
