# driver-adapters/http-in/src/main/java/com/jumia/skylens/http/in/controllers/ReferenceDataController.java
@@ -1,6 +1,7 @@
 package com.jumia.skylens.http.in.controllers;
 
 import com.jumia.skylens.http.in.model.DateRangeOption;
+import com.jumia.skylens.http.in.model.PaymentType;
 import com.jumia.skylens.http.in.services.ReferenceDataService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.RestController;
@@ -17,5 +18,11 @@ public class ReferenceDataController implements ReferenceDataApi {
     public List<DateRangeOption> getDateRanges() {
 
         return referenceDataService.listDateRangeTypes();
+    }
+
+    @Override
+    public List<PaymentType> getPaymentTypes() {
+
+        return referenceDataService.listPaymentTypes();
     }
 }
